# registrar

./: README.md  alembic.ini  pyproject.toml  sql_app.db
app/: config.py  db.py  main.py  security.py
app/auth/: business.py  router.py  schemas.py
app/dependencies/: get_current_user.py
app/middleware/: auth.py
app/user/: business.py  models.py  router.py  schemas.py
app/utils/: send_mail.py  set_cookies.py
app/utils/templates/: password-reset.html  verification.html
migrations/: env.py
migrations/versions/: 2219ddbca669_add_refresh_token_table.py  23107c5bd126_create_users_table.py  262829d3c4c0_convert_existing_datetimes_to_utc.py  9e0c4817a2ac_adds_user_codes_table.py  eacb3a943acf_make_is_active_on_user_false_by_default.py
