[project]
name = "pocuser"
version = "0.1.0"
description = "Proof of concept user authentication and authorization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
run = "uvicorn app.main:app --reload"